grafana/grafana-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/issue-temporary-certificate: "true"
    cert-manager.io/issuer: letsencrypt-oes37-spin
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: grafana
spec:
  rules:
  - host: grafana.srini-ryzon7.opsmx.net
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 3000
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - grafana.srini-ryzon7.opsmx.net
    secretName: grafana-authtls
status:
  loadBalancer: {}
